--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>JS Bin</title>
 
-  <link rel="stylesheet" href="Login.css">   
+  <link rel="stylesheet" href="Main.css">   
 </head> 
 <body>
    
