--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h1 class="logo">Logo</h1>
         
         <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Resume</a></li>
+        <li><a href="HTML-Document.html">Home</a></li>
+        <li><a href="Resume.html" target="_blank">Resume</a></li>
         <li><a href="#">Exploits</a></li>
         <li><a href="#">Contact Info</a></li>
         <li><a href="#">Login</a></li>
@@ -25,14 +25,17 @@
   </div>
         
   <div class="content">
-    <h1>Job Search</h1> <!--Job Hunting, Looking for IT Support Speacilist Role-->
+    <h1>Employement Searching</h1> <!--Job Hunting, Looking for IT Support Speacilist Role-->
     <p>I'm currently looking for an <strong>IT Support Role</strong></p>
 
     <div>
-      <button type="button"><span></span> Resume</button>
-      <button type="button"><span></span> Contact</button>
+      <button type="button"><span></span> <a href="Resume.html" target="_blank"> Resume </a> </button>
+      <button type="button"><span></span> <a href=""> Contact </a></button>
     </div>
   </div>
+  
+</body>
+</html>
  
   
 </body>
