--- a/Resume.html
+++ b/Resume.html
@@ -1,1 +1,100 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Resume</title>
 
+    <link rel="stylesheet" href="Resume.css">   
+</head>
+<body>
+    <div class="header"><h1>Shadrack Masha Kenga</h1></div>
+    <div class="status"><h2>Unemployed</h2></div> 
+
+    <div class="container">
+        <div class="contact"> 
+            <h1>Contact</h1>
+            <ul>
+                <li>682-203-2642</li>
+                <li>Hunterstudio122@gmail.com</li>
+            </ul>
+        </div>
+
+        <div class="achievements">
+            <h1>Achievements</h1>
+            <ul>
+                <li><a href="https://www.coursera.org/account/accomplishments/verify/2NMW9KZYZCKU" target="_blank"> Google IT Support Fundimentals </a></li>
+                <li><a href="https://www.coursera.org/account/accomplishments/verify/K3G4L53M5CAC" target="_blank"> Google IT Computer Networking Certificate </a> </li>
+                <li><a href="https://www.coursera.org/account/accomplishments/verify/NR52SC73KHRX" target="_blank"> Google IT Support Network Security Certificate </a></li>
+                <li><a href="https://www.coursera.org/account/accomplishments/verify/9YJ37ZV976SH" target="_blank"> Google IT Infrustructure Services And Systems Administrator Certificate </a></li>
+            </ul>
+
+        </div>
+
+        <div class="technical">
+            <h1>Technical Skills</h1>
+
+            <ul>
+                <li>Programming Languages: Html, JS, CSS, Lua, Python, PHP</li>
+                <li>Knowledge of operating systems </li>
+                <li>Knowledge of infrastructure services </li>
+                <li>Knowledge of networking services </li>
+                <li>IT security knowledge </li>
+                <li>Cyber Security knowledge</li>
+            </ul>
+
+        </div>
+
+        <div class="keyskills">
+            <h1>Key Skills</h1>
+            <ul>
+                <li>Strong Troubleshooting Skills </li>
+                <li>Customer Service Skills</li>
+                <li>Ability To Work Under Pressure</li>
+                <li>Communication Skills</li>
+                <li>Proper Time Management</li>
+                <li>Research Experience</li>
+                <li>Meticulous</li>
+
+            </ul>
+        </div>
+
+    </div>
+
+
+    <div class="summary">
+        <h1>Summary</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quos tempore quasi cumque quia,
+            aliquam modi fuga dolores earum, voluptas doloremque? 
+            Quae accusantium dolor labore quo eveniet cum dolorum consequatur?
+
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam nesciunt tempora doloribus ipsum temporibus perferendis explicabo aperiam facere? Unde, minus tenetur quam recusandae id perspiciatis dolorum maiores error ipsum quis.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quia sapiente, perferendis mollitia architecto, maxime explicabo sint autem quis aliquid quam dolores! Et temporibus cupiditate adipisci, nam repellendus eos expedita.
+        </p>
+
+    </div>
+
+    <div class="experience">
+        <h1>Experience</h1>
+
+       <div id="first">
+        <ul>
+            <li><h3>Google IT Support Course</h3></li>
+            <li><h3>Google Computer Networking Course</h3></li>
+            <li><h3>Google Operating Systems Course</h3></li>
+            <li><h3>Google IT Security Course</h3></li>
+            <li><h3>Google Systems Administrator and IT Infrustructure Course</h3></li>
+        </ul>
+            
+       </div> 
+
+    </div>
+
+
+    <div class="internship"> <!--intership / volenteer work-->
+        <h1>Internship And Volenteer Work</h1>
+        <h3>None</h3>
+    </div>
+
+</body>
+</html>
