--- a/Resume.html
+++ b/Resume.html
@@ -24,7 +24,7 @@
             <ul>
                 <li>682-203-2642</li>
                 <li>Hunterstudio122@gmail.com</li>
-                <li><a href="www.linkedin.com/in/shadrack-kenga-a3b0582b8" target="_blank">www.linkedin.com/me </a></li>
+                <li><a href="https://www.linkedin.com/in/shadrack-kenga-a3b0582b8/" target="_blank">www.linkedin.com/me </a></li>
             </ul>
         </div>
 
