--- a/Resume.html
+++ b/Resume.html
@@ -63,13 +63,8 @@
 
         <div class="summary">
             <h1>Summary</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quos tempore quasi cumque quia,
-                aliquam modi fuga dolores earum, voluptas doloremque? 
-                Quae accusantium dolor labore quo eveniet cum dolorum consequatur?
-                <br>
-                <br>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam nesciunt tempora doloribus ipsum temporibus perferendis explicabo aperiam facere? Unde, minus tenetur quam recusandae id perspiciatis dolorum maiores error ipsum quis.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quia sapiente, perferendis mollitia architecto, maxime explicabo sint autem quis aliquid quam dolores! Et temporibus cupiditate adipisci, nam repellendus eos expedita.
+            <p>
+                Highly motivated IT professional with a Google IT Support Professional Certificate and expertise in a range of programming languages including HTML, JavaScript, CSS, Lua, Python, and PHP. Proficient in operating systems, infrastructure services, and networking services. Skilled in IT security and cybersecurity practices with a strong troubleshooting aptitude. Proven ability to deliver exceptional customer service, work effectively under pressure, and communicate complex technical concepts clearly. Excellent time management and research skills with meticulous attention to detail.
             </p>
         
         </div>
