--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="HTML-Document.html">Home</a></li>
         <li><a href="Resume.html" target="_blank">Resume</a></li>
         <li><a href="#">Exploits</a></li>
-        <li><a href="#">Contact Info</a></li>
+        <li><a href="contact.html">Contact Info</a></li>
         <li><a href="#">Login</a></li>
         </ul>
     </div>
