--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,13 @@
 <body>
 
     <div class="topbar">
+        <h1 class="logo">Logo</h1>
+
+        <ul class="menu">
+            <li><a href="index.html"><h3>Home</h3></a></li>
+            <li><a href="Resume.html"><h3>Resume</h3></a></li>
+            <li><a href=""><h3>Exploits</h3></a></li>
+        </ul>
 
     </div>
 
