--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div>
       <button type="button"><span></span> <a href="Resume.html" target="_blank"> Resume </a> </button>
-      <button type="button"><span></span> <a href=""> Contact </a></button>
+      <button type="button"><span></span> <a href="contact.html"> Contact </a></button>
     </div>
   </div>
   
