--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
         <ul class="menu">
             <li><a href="index.html"><h3>Home</h3></a></li>
-            <li><a href="Resume.html"><h3>Resume</h3></a></li>
+            <li><a href="Resume.html" target="_blank"><h3>Resume</h3></a></li>
             <li><a href=""><h3>Exploits</h3></a></li>
         </ul>
 
