--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="logo">Logo</h1>
         
         <ul>
-        <li><a href="HTML-Document.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="Resume.html" target="_blank">Resume</a></li>
         <li><a href="#">Exploits</a></li>
         <li><a href="contact.html">Contact Info</a></li>
