--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
   </div>
         
   <div class="content">
-    <h1>Employement Searching</h1> <!--Job Hunting, Looking for IT Support Speacilist Role-->
-    <p>I'm currently looking for an <strong>IT Support Role</strong></p>
+    <h1>Employement Searching</h1>
   </div>
   
 </body>
