--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
     <link rel="stylesheet" media="screen and (min-width: 600px)" href="BigScreen.CSS">   
-    <link rel="stylesheet" media="screen and (max-width: 599.99px)" href="contactsmall.css">  
+    <link rel="stylesheet" media="screen and (max-width: 599.99px)" href="SmallScreen.CSS">  
 </head>
 <body>
     <section class="FirstPage">
