--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +11,7 @@
 
 
     <link rel="stylesheet" media="screen and (min-width: 600px)" href="BigScreen.CSS">   
-    <link rel="stylesheet" media="screen and (max-width: 599.99px)" href="SmallScreen.CSS">  
+    <link rel="stylesheet" media="screen and (max-width: 599.99px)" href="contactsmall.css">  
 </head>
 <body>
     <section class="FirstPage">
