Fixed LinkedIn Hyper Reference

--- a/Services.html
+++ b/Services.html
@@ -38,7 +38,7 @@
     
                     <div class="ProjectContent" id="ProjectContent1">
                         Currently Looking For Job Opportunities, <br> <br>
-                        If you believe I'd be a good addition to your team then contact me on <a target="_blank" href="www.linkedin.com/in/shadrack-kenga-a3b0582b8" style="color: #FEFFFF;">Linkedin</a>.
+                        If you believe I'd be a good addition to your team then contact me on <a target="_blank" href="http://www.linkedin.com/in/shadrack-kenga-a3b0582b8" style="color: #FEFFFF;">Linkedin</a>.
                     </div>
                     <div class="ProjectTitle" id="ProjectTitle12"><h1>LinkedIn<br> </h1></div>
                 </p>
