Added Youtube Link For My First VId

--- a/project.html
+++ b/project.html
@@ -50,7 +50,7 @@
     
                     <div class="ProjectContent" id="ProjectContent2">
                         A Web Application that serves as a Portfolio for my Achievements, and Projects<br> <br>
-                        <a href="https://www.youtube.com/watch?v=TfQ919JcKo0">For Both Personal and Professional Projects.</a>
+                        <a id="Stand_Out" href="https://www.youtube.com/watch?v=TfQ919JcKo0" target="_blank">For Both Personal and Professional Projects.</a>
                     </div>
                     <div class="ProjectTitle" id="ProjectTitle22"><h1>Web App<br> </h1></div>
                 </p>
